--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ header {
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary  fixed-top bg-dark" data-bs-theme="dark">
         <div class="container">
-          <a class="navbar-brand" href="/index.html">EatTheMeat</a>
+          <a class="navbar-brand" href="index.html">EatTheMeat</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -50,7 +50,7 @@ header {
             
             </ul>
 
-            <form action="/index.html" class="d-flex mx-2" role="search">
+            <form action="index.html" class="d-flex mx-2" role="search">
                 <div class="input-group ">
                     <input type="text" class="form-control" name="search" placeholder="Search" aria-label="Search" aria-describedby="Search">
                     <button class="btn btn-success " type="submit" id="Search">Search</button>
@@ -59,7 +59,7 @@ header {
             </form>
 
 
-            <form action="/country&category.html" method="get" class="mx-2">
+            <form action="country&category.html" method="get" class="mx-2">
 
 
                 <div class="input-group">
@@ -102,7 +102,7 @@ header {
 
 
 <header class="container-fluid  " > 
-<form action="/index.html">
+<form action="index.html">
     <div class="input-group w-50 mb-3 mx-auto">
         <input type="text" class="form-control py-3" name="search" placeholder="Search" aria-label="Search" aria-describedby="Search">
         <button class="btn btn-success px-4" type="submit" id="Search">Search</button>
