--- a/country&category.html
+++ b/country&category.html
@@ -34,23 +34,23 @@ header {
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary  fixed-top bg-dark" data-bs-theme="dark">
         <div class="container">
-          <a class="navbar-brand" href="/index.html">EatTheMeat</a>
+          <a class="navbar-brand" href="index.html">EatTheMeat</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/index.html">Search for Spices</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Search for Spices</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/country&Category.html">Country And Category</a>
+                    <a class="nav-link active" aria-current="page" href="country&Category.html">Country And Category</a>
                   </li>
                   
             
             </ul>
 
-            <form action="/index.html" class="d-flex mx-2" role="search">
+            <form action="index.html" class="d-flex mx-2" role="search">
                 <div class="input-group ">
                     <input type="text" class="form-control" name="search" placeholder="Search" aria-label="Search" aria-describedby="Search">
                     <button class="btn btn-success " type="submit" id="Search">Search</button>
@@ -59,7 +59,7 @@ header {
             </form>
 
 
-            <form action="/country&category.html" method="get" class="mx-2">
+            <form action="country&category.html" method="get" class="mx-2">
 
 
                 <div class="input-group">
@@ -111,7 +111,7 @@ header {
 
 
 
-    <form action="/country&category.html" method="get" class="mx-2">
+    <form action="country&category.html" method="get" class="mx-2">
 
 
         <div class="input-group w-50 mb-3 mx-auto ">
